# processguard

./: CMakeLists.txt  README.md
attacker/: AttackTypes.hpp  AttackerUtils.hpp  Attacks.hpp  CMakeLists.txt  main.cpp  payload.cpp
common/: Events.hpp  Logger.hpp  Result.hpp  WinError.cpp  WinHandle.hpp
guardian/: CMakeLists.txt  EtwSessionMonitor.cpp  EtwSessionMonitor.hpp  EventDispatcher.cpp  EventDispatcher.hpp  GuardianOrchestrator.cpp  GuardianOrchestrator.hpp  HeartbeatMonitor.cpp  HeartbeatMonitor.hpp  MemoryIntegrityMonitor.cpp  MemoryIntegrityMonitor.hpp  ModuleWatchdog.cpp  ModuleWatchdog.hpp  ProcessAttacher.cpp  ProcessAttacher.hpp  main.cpp
